<resources>
    <string name="app_name">YOAPP VENDOR</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAyJKXE5ViV8h0J_-kvuYfbiJFCLEKd05w</string>

    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="create_nsell_ngrow">Create.\nSell.\nGrow.</string>
    <string name="it_s_simple">It\'s Simple.</string>
    <string name="yoapp">YOAPP</string>
    <string name="powered_by_i_softzone">Powered by i-SOFTZONE</string>
    <string name="internet_info">There\'s no network connection. Make\nsure that your\'re connected to a\nWi-Fi or mobile network and\ntry again.</string>

</resources>
