<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkRed"
    tools:context=".activity.SplashActivity">

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_30dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/create_nsell_ngrow"
            android:textColor="@color/orange"
            android:lineSpacingExtra="-15dp"
            android:textSize="60sp"
            android:textStyle="normal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_30dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/it_s_simple"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="@dimen/size_100dp"
            android:layout_height="@dimen/size_100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logosmall"
            app:tint="@color/white" />

        <TextView
            android:layout_width="@dimen/size_120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:text="@string/yoapp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/powered_by_i_softzone"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size10" />

</RelativeLayout>